# tauri-surreal-kit

./: .eslintrc.json  .gitignore  LICENSE  README.md  README_ru.md  package-lock.json  package.json  setup.js  tsconfig.json  vite.config.ts  vitest.config.ts
backend/surreal_domain/: Cargo.toml
backend/surreal_domain/surreal_domain_core/: Cargo.toml
backend/surreal_domain/surreal_domain_core/src/: lib.rs
backend/surreal_domain/surreal_domain_facade/: Cargo.toml
backend/surreal_domain/surreal_domain_facade/src/: lib.rs
backend/surreal_domain/surreal_domain_macros/: Cargo.toml
backend/surreal_domain/surreal_domain_macros/src/: entity.rs  entity_commands.rs  lib.rs  relation.rs  schema.rs
backend/tauri_shell/: Cargo.toml  tauri.conf.json
backend/tauri_shell/data/: settings.json
backend/tauri_shell/src/: main.rs
backend/tauri_shell/src/logic/: mod.rs  performance.rs  system.rs
frontend/src/components/Vue/: CommandPalette.vue  EditorGroupPane.vue  EditorTabBar.vue  ExplorerTree.vue  FloatingWindow.vue  HistorySidebar.vue  QuickOpen.vue  Settings.vue  TagsField.vue  ThemeSwitcher.vue  TreeNodes.vue  WorkspaceLayout.vue  XboxWheel.vue
frontend/src/css/: app.css  explorer-tree.css  fonts.css  glass-animations.css  glass-theme.css  new-ui-theme.css  project_launcher.css
frontend/src/css/modules/: settings.css
frontend/src/js/: i18n.ts
frontend/src/js/app/: settings.ts
frontend/src/js/composables/: useEditorGroups.ts  useShellApp.ts  useTreeSelection.js
frontend/src/shell/: main.html  settings.html  shell-i18n.js  splash.html
(+9 files in other folders)
